--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,9 +1,12 @@
 name: GitHub Pages
 
-#on:
-#  push:
-#    branches:
-#      - main
+on:
+  pull_request:
+    types:
+      - edited
+  push:
+    branches:
+      - main
 
 jobs:
   build:
