--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,7 +16,7 @@ jobs:
       - run: chmod +x ./deployment/update-gh-pages.sh
       - run: sudo ./deployment/update-gh-pages.sh
         env:
-          DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+          DEPLOY_TOKEN: ${{ gh-pages.DEPLOY_TOKEN }}
 
       - uses: actions/setup-node@v1
         with:
