--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,7 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-          DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+          DEPLOY_TOKEN: ${{ DEPLOY_TOKEN }}
+          GITHUB_REPOSITORY: ${{ GITHUB_REPOSITORY }}
+          GITHUB_ACTOR: ${{ GITHUB_ACTOR }}
       - run: chmod +x ./deployment/update-gh-pages.sh
       - run: ./deployment/update-gh-pages.sh
 
