--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14x]
+        node-version: [12.x, 14.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -41,10 +41,6 @@ jobs:
       - name: Build
         run: |
           npm run build
-      # todo - create linter in package.json
-      #      - name: Lint
-      #        run: |
-      #          npm run lint
       - name: Test
         run: |
           npm run test
