--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -41,3 +41,6 @@ jobs:
       - name: Build
         run: |
           npm run build
+      - name: Deploy
+        run: |
+          npm run deploy
