--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -43,4 +43,5 @@ jobs:
           npm run build
       - name: Deploy
         run: |
+          npm run add angular-cli-ghpages
           npm run deploy
