--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "pre-deploy": "ng add angular-cli-ghpages",
     "deploy": "ng deploy --base-href=anjeyy.github.io"
   },
   "private": true,
