--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -42,6 +42,8 @@ jobs:
         run: |
           npm run build
       - name: Deploy
+        env:
+          PERSONAL_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
         # script 'deploy' in 'package.json'
         run: |
           npm run deploy
