--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=/anjeyy.github.io/"
+    "deploy": "ng deploy --repo=https://github.com/anjeyy/anjeyy.github.io.git --base-href=/anjeyy.github.io/"
   },
   "private": true,
   "dependencies": {
