--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,8 @@
 name: Angular GitHub CI
+
+env:
+  GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+
 on:
   pull_request: #remove
   push:
@@ -20,6 +24,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+          GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
 
       - name: Cache node modules
         id: cache-nodemodules
@@ -42,8 +47,6 @@ jobs:
         run: |
           npm run build
       - name: Deploy
-        env:
-          PERSONAL_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
         # script 'deploy' in 'package.json'
         run: |
           npm run deploy
