--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "deploy": "ng deploy --repo=https://github.com/anjeyy/anjeyy.github.io.git --base-href=/anjeyy.github.io/"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
