feature: site under construction dialog (#5)

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,9 +1,6 @@
 name: Angular GitHub CI
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
   ci:
@@ -44,7 +41,8 @@ jobs:
         run: |
           npm run build
       - name: Deploy
+        if: github.ref == 'refs/heads/main'
         env:
           GH_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
         run: |
-          npm run ng -- deploy --base-href=/anjeyy.github.io/ --name="automated deployment" --email=automated.gh-pages@bot.github.com
+          npm run ng -- deploy --base-href=anjeyy.github.io --name="automated deployment" --email=automated.gh-pages@bot.github.com
